# go-pdf-merge

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/args/: CMakeLists.txt  args.c
src/args/include/: args.h
test/: CMakeLists.txt  Test_args.c  test_args.c  test_runner.c
